--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,9 +19,83 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="javascript/jquery-1.11.2.min.js" defer></script>
+    <script src="javascript/jquery-1.11.2.min.js"></script>
     <script src="javascript/bootstrap.js" defer></script>
     <script src="javascript/parallax.js" defer></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5j_HO-V0Fcm1D-ujHmWSK43ZIZXCh0Eo"></script>
+
+    <script type="text/javascript">
+
+        var mapHeight, mapOffset, windowHeight;
+        var markerSet = false;
+
+        $(function(){
+            mapHeight = $('#map-section').height();
+            mapOffset = $('#map-section').offset().top;
+            windowHeight = $(window).height();
+
+            $(window).resize(function(){
+                mapOffset = $('#map-section').offset().top;
+                windowHeight = $(window).height();
+            })
+        });
+
+        function dropPin(map, coordinates) {
+            if (!markerSet) {
+
+                var mapVisible = -mapOffset + $(window).scrollTop() + windowHeight;
+
+                if (mapVisible > mapHeight / 1.7) {
+
+                    var locationMarker = new google.maps.Marker({
+                        position: coordinates,
+                        map: map,
+                        icon: '/images/map-marker.png',
+                        animation: google.maps.Animation.DROP
+                    });
+
+                    markerSet = true;
+                }
+            }
+        }
+
+        function initialize() {
+
+            var wellingtonHouseCoord = new google.maps.LatLng(51.8843375, 0.8946597);
+            var mapCenterCoord = new google.maps.LatLng(51.8863375, 0.8946597);
+
+            var mapOptions = {
+                center: mapCenterCoord,
+                zoom: 15,
+                scrollwheel: false
+            };
+
+            var map = new google.maps.Map(document.getElementById('map-canvas'),
+                    mapOptions);
+
+
+            $(window).scroll(function(){
+                dropPin(map, wellingtonHouseCoord);
+            }).resize(function(){
+                dropPin(map, wellingtonHouseCoord);
+            });
+
+            dropPin(map, wellingtonHouseCoord);
+
+            google.maps.event.addDomListener(window, 'resize', function() {
+                map.setCenter(wellingtonHouseCoord);
+            });
+
+            map.parallaxSpeed = 8;
+            mapParallax(map);
+
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+
+
+    </script>
 
 </head>
 
@@ -52,36 +127,118 @@
 
 <section id="intro" data-speed="10" data-type="background">
     <div class="container">
-        <div class="col-md-4 well">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque cursus nisl consectetur et.</p>
-            <p><a class="btn btn-success" href="#">View details »</a></p>
-        </div>
-        <div class="col-md-4 col-md-offset-1 well">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque cursus nisl consectetur et.</p>
-            <p><a class="btn btn-success" href="#">View details »</a></p>
-        </div>
-        <div class="col-md-4 col-md-offset-1 well">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna, vel scelerisque cursus nisl consectetur et.</p>
-            <p><a class="btn btn-success" href="#">View details »</a></p>
+        <div class="col-md-6 col-md-offset-8">
+            <div class="office-highlights panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Office Space</h3>
+                </div>
+                <div class="panel-body">
+                    <ul>
+                        <li>Suites from 130 sq.ft. – 965 sq.ft.</li>
+
+                        <li>Large office space from 1,500 sq ft - 30,000 sq ft</li>
+
+                        <li>Rent: All rents are negotiable</li>
+
+                        <li>Flexible office accommodation over 7 floors</li>
+
+                        <li>2 passenger lift serving all floors</li>
+
+                        <li>On-site parking for 100 cars</li>
+
+                        <li>Well located and prominent office in town centre</li>
+
+                        <li>Easy access to the A12, M11 and M25</li>
+
+                        <li>Very close to prime retailing amenities</li>
+                    </ul>
+                </div>
+                <div class="panel-footer">View details »</div>
+            </div>
         </div>
     </div>
 </section>
+<section>
+    <div class="container">
+        <div class="text-container lead">
 
-<div class="container">
-    <div class="starter-template lead">
-        <h1>Office Space</h1>
-        <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <h2>About The Building</h2>
+            <p>Wellington House comprises a detached office building of steel frame constructions. It is arranged over ground and 6 upper floors totaling 43,000 sq.ft. The accommodation has been refurbished during the last two years.</p>
 
-            <p>Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum. Donec ullamcorper nulla non metus auctor fringilla. Curabitur blandit tempus porttitor. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p>The property benefits from the following specification:</p>
 
-            <p>Donec sed odio dui. Donec sed odio dui. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec sed odio dui. Nulla vitae elit libero, a pharetra augue.</p>
+            <ul>
+                <li>Open plan, flexible floor plates.</li>
+                <li>Two passenger lifts serving all floors.</li>
+            </ul>
 
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+            <p>The site extends to approximately 1.3 acres and provides surface car parking with 100 spaces.</p>
+
+            <p>The building comprises of both Serviced and Non-Serviced offices. Rates for the serviced offices are inclusive of electricity, gas, water and service charge.</p>
+
+        </div>
+    </div><!-- /.container -->
+</section>
+<section id="map-section" class="info-section">
+    <div id="address-container" class="container">
+        <h2 class="section-header col-lg-6 col-lg-offset-1 col-md-7 col-md-offset-0 col-sm-offset-2 col-sm-12">Where To Find Us</h2>
+        <p id="address" class="col-lg-6 col-md-7 col-sm-12">
+            90-92 Butt Road, Colchester, Essex, CO33DA
+        </p>
     </div>
+    <section style="height: 400px;" id="map-canvas">
+        <!-- Google Map Embed -->
+    </section>
+</section>
 
-</div><!-- /.container -->
+<section class="enquiries-section">
+    <div class="container">
+        <div class="text-container lead">
 
+            <h1>Enquiries</h1>
+            <p>If you are interested in this property, please get in touch with us using the form below.</p>
+
+        </div>
+
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label for="inputName3" class="col-sm-4 control-label">Full Name</label>
+                <div class="col-sm-7">
+                    <input type="text" class="form-control" id="inputName3" placeholder="Full Name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
+                <div class="col-sm-7">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPhone3" class="col-sm-4 control-label">Phone Number</label>
+                <div class="col-sm-7">
+                    <input type="number" class="form-control" id="inputPhone3" placeholder="Phone Number">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputMessage3" class="col-sm-4 control-label">Message</label>
+                <div class="col-sm-7">
+                    <textarea class="form-control" id="inputMessage3"></textarea>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-offset-4 col-sm-7">
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </div>
+            </div>
+        </form>
+
+    </div><!-- /.container -->
+</section>
+<footer>
+    <section class="info-section">
+        <div class="container text-container">
+            <p class="lead">Website design by CORE Data Systems Ltd.</p>
+        </div>
+    </section>
+</footer>
 </body></html>
