--- a/www/office-space.html
+++ b/www/office-space.html
@@ -114,8 +114,8 @@
 
         <nav id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">home</a></li>
-                <li><a href="/office-space.html">offices</a></li>
+                <li><a href="/">home</a></li>
+                <li class="active"><a href="/office-space.html">offices</a></li>
                 <li><a href="/virtual-offices.html">virtual offices</a></li>
                 <li><a href="/client-list.html">client list</a></li>
                 <li><a href="/#enquiries">contact</a></li>
@@ -133,36 +133,10 @@
     </div>
 </header>
 
-<section class="intro index" data-speed="10" data-type="background">
+<section class="intro office-space" data-speed="10" data-type="background">
     <div class="container">
-        <div class="col-md-6 col-md-offset-8">
-            <div class="office-highlights panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Office Space</h3>
-                </div>
-                <div class="panel-body">
-                    <ul>
-                        <li>Suites from 130 sq.ft. – 965 sq.ft.</li>
-
-                        <li>Large office space from 1,500 sq ft - 30,000 sq ft</li>
-
-                        <li>Rent: All rents are negotiable</li>
-
-                        <li>Flexible office accommodation over 7 floors</li>
-
-                        <li>2 passenger lift serving all floors</li>
-
-                        <li>On-site parking for 100 cars</li>
-
-                        <li>Well located and prominent office in town centre</li>
-
-                        <li>Easy access to the A12, M11 and M25</li>
-
-                        <li>Very close to prime retailing amenities</li>
-                    </ul>
-                </div>
-                <div class="panel-footer">View details »</div>
-            </div>
+        <div class="col-md-14">
+            <h1>Colchester Offices</h1>
         </div>
     </div>
 </section>
@@ -170,76 +144,54 @@
     <div class="container">
         <div class="text-container lead">
 
-            <h2>About The Building</h2>
-            <p>Wellington House comprises a detached office building of steel frame constructions. It is arranged over ground and 6 upper floors totaling 43,000 sq.ft. The accommodation has been refurbished during the last two years.</p>
-
-            <p>The property benefits from the following specification:</p>
+            <h2>Serviced Offices</h2>
+            <p>Our serviced offices offer business rates for premium suites in the Wellington House building. The rates for serviced offices all include electricity, gas, water, and service charge. Offices are furnished, and further furniture can be supplied if required. Other benefits of our serviced offices include:</p>
 
             <ul>
-                <li>Open plan, flexible floor plates.</li>
-                <li>Two passenger lifts serving all floors.</li>
+                <li>Mail sorting</li>
+                <li>Manned reception (between 8:30am and 5pm)</li>
+                <li>CCTV cameras in operation</li>
+                <li>Call forwarding</li>
+                <li>Included car park space</li>
             </ul>
 
-            <p>The site extends to approximately 1.3 acres and provides surface car parking with 100 spaces.</p>
+            <p>Serviced suites are available with sizes ranging from 150 to 965 square feet.</p>
 
-            <p>The building comprises of both Serviced and Non-Serviced offices. Rates for the serviced offices are inclusive of electricity, gas, water and service charge.</p>
+            <h2>Non-Serviced Offices</h2>
+            <p>Our non-serviced offices are large, unfurnished open plan offices that can be adapted easily to your needs. Rates for serviced offices do not include utilities, which are offered as a separate service charge. Benefits of our non-serviced offices include:</p>
 
+            <ul>
+                <li>Mail sorting</li>
+                <li>Manned reception (between 8:30am and 5pm)</li>
+                <li>CCTV cameras in operation</li>
+                <li>Call forwarding</li>
+                <li>Included car park space</li>
+            </ul>
+
+            <p>Non-serviced offices are available with sizes ranging from 150 to 965 square feet.</p>
         </div>
     </div><!-- /.container -->
 </section>
-<section id="map-section" class="info-section">
-    <div id="address-container" class="container">
-        <h2 class="section-header col-lg-6 col-lg-offset-1 col-md-7 col-md-offset-0 col-sm-offset-2 col-sm-12">Where To Find Us</h2>
-        <p id="address" class="col-lg-6 col-md-7 col-sm-12">
-            90-92 Butt Road, Colchester, Essex, CO33DA
-        </p>
-    </div>
-    <section style="height: 400px;" id="map-canvas">
-        <!-- Google Map Embed -->
-    </section>
-</section>
+<section class="intro office-space" data-speed="10" data-type="background">
 
-<section id="enquiries" class="enquiries-section">
+</section>
+<section>
     <div class="container">
         <div class="text-container lead">
 
-            <h2>Enquiries</h2>
-            <p>If you are interested in this property, please get in touch with us using the form below.</p>
+            <h2>Virtual Offices</h2>
+            <p>Our virtual office services allow you to hold a business address at Wellington House, without renting physical space. We provide the following for users of this service:</p>
 
+            <ul>
+                <li>Business Address</li>
+                <li>Mail Sorting</li>
+                <li>Mail Forwarding</li>
+                <li>Telephone Answering</li>
+                <li>Meeting Room Access</li>
+            </ul>
+
+            <p>For more information and pricing, please visit our <a href="/virtual-offices">virtual offices</a> page.</p>
         </div>
-
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputName3" class="col-sm-4 control-label">Full Name</label>
-                <div class="col-sm-7">
-                    <input type="text" class="form-control" id="inputName3" placeholder="Full Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
-                <div class="col-sm-7">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPhone3" class="col-sm-4 control-label">Phone Number</label>
-                <div class="col-sm-7">
-                    <input type="number" class="form-control" id="inputPhone3" placeholder="Phone Number">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputMessage3" class="col-sm-4 control-label">Message</label>
-                <div class="col-sm-7">
-                    <textarea class="form-control" id="inputMessage3"></textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-7">
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </div>
-            </div>
-        </form>
-
     </div><!-- /.container -->
 </section>
 <footer>
