--- a/www/virtual-offices.html
+++ b/www/virtual-offices.html
@@ -114,9 +114,9 @@
 
         <nav id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">home</a></li>
+                <li><a href="/">home</a></li>
                 <li><a href="/office-space.html">offices</a></li>
-                <li><a href="/virtual-offices.html">virtual offices</a></li>
+                <li class="active"><a href="/virtual-offices.html">virtual offices</a></li>
                 <li><a href="/client-list.html">client list</a></li>
                 <li><a href="/#enquiries">contact</a></li>
             </ul>
@@ -133,36 +133,10 @@
     </div>
 </header>
 
-<section class="intro index" data-speed="10" data-type="background">
+<section class="intro office-space" data-speed="10" data-type="background">
     <div class="container">
-        <div class="col-md-6 col-md-offset-8">
-            <div class="office-highlights panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Office Space</h3>
-                </div>
-                <div class="panel-body">
-                    <ul>
-                        <li>Suites from 130 sq.ft. – 965 sq.ft.</li>
-
-                        <li>Large office space from 1,500 sq ft - 30,000 sq ft</li>
-
-                        <li>Rent: All rents are negotiable</li>
-
-                        <li>Flexible office accommodation over 7 floors</li>
-
-                        <li>2 passenger lift serving all floors</li>
-
-                        <li>On-site parking for 100 cars</li>
-
-                        <li>Well located and prominent office in town centre</li>
-
-                        <li>Easy access to the A12, M11 and M25</li>
-
-                        <li>Very close to prime retailing amenities</li>
-                    </ul>
-                </div>
-                <div class="panel-footer">View details »</div>
-            </div>
+        <div class="col-md-14">
+            <h1>Virtual Offices</h1>
         </div>
     </div>
 </section>
@@ -170,76 +144,24 @@
     <div class="container">
         <div class="text-container lead">
 
-            <h2>About The Building</h2>
-            <p>Wellington House comprises a detached office building of steel frame constructions. It is arranged over ground and 6 upper floors totaling 43,000 sq.ft. The accommodation has been refurbished during the last two years.</p>
+            <h2>Virtual Offices</h2>
+            <p>Our virtual office services allow you to hold a business address at Wellington House, without renting physical space. The service offers numerous benefits, including mail sorting and forwarding, telephone answering and access to meeting rooms when necessary.</p>
 
-            <p>The property benefits from the following specification:</p>
+            <h2>Business Address</h2>
+            <p>If you work from home, you may want a non-residential address to register your business at for a number of reasons. Our virtual office service allows you to register your business at Wellington House, as well as receive mail to the address and book meeting rooms to meet clients.</p>
 
-            <ul>
-                <li>Open plan, flexible floor plates.</li>
-                <li>Two passenger lifts serving all floors.</li>
-            </ul>
+            <h2>Mail Forwarding</h2>
+            <p>We sort and hold all of the mail sent to your registered address, which you can collect whenever is convenient for you. We can also forward this mail for you on a regular basis to any address. You can be notified whenever you receive any mail.</p>
 
-            <p>The site extends to approximately 1.3 acres and provides surface car parking with 100 spaces.</p>
+            <h2>Telephone Answering</h2>
+            <p>We will answer calls on your company's behalf, and act as a reception to your business, transferring calls to any number you provide.</p>
 
-            <p>The building comprises of both Serviced and Non-Serviced offices. Rates for the serviced offices are inclusive of electricity, gas, water and service charge.</p>
+            <h2>Meeting Room Access</h2>
+            <p>We also provide the option to hire meeting rooms for a day or a number of hours whenever needed. Meeting rooms are equipped with plug sockets and projectors for giving important presentations.</p>
 
+            <h2>Pricing</h2>
+            <p>The virtual office service is provided at a cost of £50pcm or £500pa</p>
         </div>
-    </div><!-- /.container -->
-</section>
-<section id="map-section" class="info-section">
-    <div id="address-container" class="container">
-        <h2 class="section-header col-lg-6 col-lg-offset-1 col-md-7 col-md-offset-0 col-sm-offset-2 col-sm-12">Where To Find Us</h2>
-        <p id="address" class="col-lg-6 col-md-7 col-sm-12">
-            90-92 Butt Road, Colchester, Essex, CO33DA
-        </p>
-    </div>
-    <section style="height: 400px;" id="map-canvas">
-        <!-- Google Map Embed -->
-    </section>
-</section>
-
-<section id="enquiries" class="enquiries-section">
-    <div class="container">
-        <div class="text-container lead">
-
-            <h2>Enquiries</h2>
-            <p>If you are interested in this property, please get in touch with us using the form below.</p>
-
-        </div>
-
-        <form class="form-horizontal">
-            <div class="form-group">
-                <label for="inputName3" class="col-sm-4 control-label">Full Name</label>
-                <div class="col-sm-7">
-                    <input type="text" class="form-control" id="inputName3" placeholder="Full Name">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
-                <div class="col-sm-7">
-                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputPhone3" class="col-sm-4 control-label">Phone Number</label>
-                <div class="col-sm-7">
-                    <input type="number" class="form-control" id="inputPhone3" placeholder="Phone Number">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="inputMessage3" class="col-sm-4 control-label">Message</label>
-                <div class="col-sm-7">
-                    <textarea class="form-control" id="inputMessage3"></textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-7">
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </div>
-            </div>
-        </form>
-
     </div><!-- /.container -->
 </section>
 <footer>
