Lots of changes

--- a/www/content/client-list.html
+++ b/www/content/client-list.html
@@ -82,32 +82,32 @@
             </div>
             <div class="client">
                 <h2>Target Internet Ltd</h2>
-                <p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+                <p>Target internet Ltd has been Supporting businesses in the Essex and Suffolk Areas for over 10 Years. It is our aim to provide a complete one stop service for our business clients, at competitive rates, and provide support services that meet the requirements of the client. By carrying out our aim we are able to let the client concentrate on their business and leave the business of IT to us.</p>
             </div>
             <div class="client">
                 <h2>Vocational Training Services</h2>
-                <p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+                <p>VTS is a leader in the provision of  Apprenticeship and private training programmes in and around Essex. Since 1994 VTS’ team of highly experienced and occupationally qualified team of assessors and tutors have supported school leavers, professionals and employers in achieving their qualification and training needs. Working with over 400 care facilities in the county, VTS has tailored training solutions that have been designed to fit around the learners and employers busy work schedule.</p>
             </div>
             <div class="client">
                 <h2>Mulberry Publications Ltd</h2>
-                <p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                <p>Mulberry Publications is an independent business media company engaged in multi-platform publishing for a wide range of industry sectors. We publish magazines, news websites and directories, all designed to be an invaluable resource for businesspeople at management or ownership level. With an emphasis on the highest quality editorial and production, Mulberry Publications strives to produce the very best business publications for its readerships. Offering readers and subscribers first-class content allows us to offer advertisers first-class marketing opportunities.</p>
             </div>
-            <div class="client">
-                <h2>Colourfast</h2>
-                <p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec ullamcorper nulla non metus auctor fringilla.</p>
-            </div>
-            <div class="client">
-                <h2>Star Design Solutions Ltd</h2>
-                <p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
-            </div>
+            <!--<div class="client">-->
+                <!--<h2>Colourfast</h2>-->
+                <!--<p>Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec ullamcorper nulla non metus auctor fringilla.</p>-->
+            <!--</div>-->
+            <!--<div class="client">-->
+                <!--<h2>Star Design Solutions Ltd</h2>-->
+                <!--<p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>-->
+            <!--</div>-->
             <div class="client">
                 <h2>Pura Power Ltd</h2>
-                <p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
+                <p>Pura Power Ltd are Suppliers and Installers of Solar Pv, Heat pumps and Biomass boilers.</p>
             </div>
-            <div class="client">
-                <h2>Neil Scrivens T/A M A N Fleet</h2>
-                <p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>
-            </div>
+            <!--<div class="client">-->
+                <!--<h2>Neil Scrivens T/A M A N Fleet</h2>-->
+                <!--<p>Etiam porta sem malesuada magna mollis euismod. Donec id elit non mi porta gravida at eget metus. Vestibulum id ligula porta felis euismod semper. Curabitur blandit tempus porttitor.</p>-->
+            <!--</div>-->
         </div>
     </div><!-- /.container -->
 </section>
